<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"  >
    
    <TextView
        android:id="@+id/contentfeedscreen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/contentfeed_title" />
    
    <TextView
        android:id="@+id/contentfeedscreen_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:text="@string/contentfeed_text" />
    
    <Button
        android:id="@+id/contentfeedscreen_settings"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/primary_button"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/customize_setting"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/contentfeedscreen_default_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:clickable="true"
        android:text="@string/use_default_setting"
        android:textColor="@color/light_blue" />

</LinearLayout>
