<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"  >
    
    <TextView
        android:id="@+id/welcomescreen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/welcome_title" />

    <TextView
        android:id="@+id/welcomescreen_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:text="@string/welcome_text"/>

    <Button
        android:id="@+id/welcomescreen_getStarted"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/primary_button"
        android:onClick="getStartedClicked"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/getstarted"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/welcomescreen_configureApp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/primary_button"
        android:textColor="@color/black"
        android:onClick="configureAppClicked"
        android:text="@string/configureapp" />
    
</LinearLayout>
