<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/loginscreen_logo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginscreen_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/loginscreen_loginText"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:background="@drawable/edit_box"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical"
            android:textCursorDrawable="@null" />
        
        <EditText
            android:id="@+id/loginscreen_passText"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="@drawable/edit_box"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:textCursorDrawable="@null" />
    
        <Button
            android:id="@+id/loginscreen_login_button"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/primary_button"
            android:textColor="@color/black"
            android:text="@string/button_signin" />
        
        <TextView
            android:id="@+id/loginscreen_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:autoLink="web"
            android:onClick="forgotPasswordClicked"
            android:text="@string/forgotPassword"
            android:textColor="@color/light_blue" />

    </LinearLayout>

</RelativeLayout>