<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/ScrlView">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">
        
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:stretchColumns="*" >
    
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            
                <include
                    android:id="@+id/tile1"
                    layout="@layout/summary_top_tile">
                </include>
                
                <include
                    android:id="@+id/tile2"
                    layout="@layout/summary_top_tile">
                </include>
           </TableRow>
    
        </TableLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/summary_reputation_score_tile_marginTop"
            android:orientation="vertical">
    
            <TextView
                android:id="@+id/reputation_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/cobalt_blue"
                android:textSize="@dimen/summary_reputation_score_titletextSize"
                android:text="@string/reputation_score"/>
                    
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/summary_reputation_score_tile_marginTop"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp">
                
                <!-- TODO: Check if we can use art instead of creating one -->
                <LinearLayout
                    android:layout_width="@dimen/summary_reputation_score_bar_width"
                    android:layout_height="@dimen/summary_reputation_score_bar_height"
                    android:background="@drawable/poor_rating_background">
                     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/summary_reputation_score_textsize"
                        android:text="@string/poor"/>
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="@dimen/summary_reputation_score_bar_width"
                    android:layout_height="@dimen/summary_reputation_score_bar_height"
                    android:background="@color/pumpkin_orange">
                     
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/summary_reputation_score_textsize"
                        android:text="@string/fair"/>
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="@dimen/summary_reputation_score_bar_width"
                    android:layout_height="@dimen/summary_reputation_score_bar_height"
                    android:background="@color/mustard_yellow">
                     
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/summary_reputation_score_textsize"
                        android:text="@string/average"/>
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="@dimen/summary_reputation_score_bar_width"
                    android:layout_height="@dimen/summary_reputation_score_bar_height"
                    android:background="@color/kelly_green">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/summary_reputation_score_textsize"
                        android:text="@string/good"/>
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="@dimen/summary_reputation_score_bar_width"
                    android:layout_height="@dimen/summary_reputation_score_bar_height"
                    android:background="@color/lime_green">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/summary_reputation_score_textsize"
                        android:text="@string/excellent"/>
                </LinearLayout>
                
            </LinearLayout>
        
        </LinearLayout>
        
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginTop="10dp"
            android:stretchColumns="*">
                
            <TableRow 
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                    
                <include 
                    android:id="@+id/listings_tile"
                    layout="@layout/summary_review_tile"
                />
                
                <include 
                    android:id="@+id/review_tile"
                    layout="@layout/summary_review_tile"
                />
                
                <include 
                    android:id="@+id/requests_tile"
                    layout="@layout/summary_review_tile"
                />
            </TableRow>
            
              <TableRow 
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <include 
                    android:id="@+id/kiosks_review_tile"
                    layout="@layout/summary_review_tile"
                />
                
                <include 
                    android:id="@+id/social_comments_tile"
                    layout="@layout/summary_review_tile"
                />
                
                <include 
                    android:id="@+id/social_posts_tile"
                    layout="@layout/summary_review_tile"
                />
            </TableRow>
        
        </TableLayout>
        
    </LinearLayout>

</ScrollView>
